# main

./: .ansible-lint  .gitignore  CHANGELOG.rst  CONTRIBUTING.md  Makefile  README.md  Vagrantfile  ansible.cfg  galaxy.yml  pyproject.toml  requirements.txt  requirements.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md
.github/workflows/: _template-molecule-test.yaml  ansible-lint.yaml  linting.yaml  molecule-role-certmanage.yaml  molecule-role-common.yaml  molecule-role-journald.yaml  molecule-role-logrotate.yaml  molecule-role-ntp.yaml  molecule-role-proxy.yaml  molecule-role-ssh.yaml  molecule-role-sudo.yaml  molecule-role-upgrade.yaml  molecule-role-webserver.yaml  molecule.yaml  release.yaml  sanity.yaml
changelogs/: .plugin-cache.yaml  changelog.yaml  config.yaml
changelogs/archive/0.0.1/: initial.yml
changelogs/archive/0.0.2/: 0.0.2.yml
changelogs/archive/0.0.3/: 0.0.3.yml
changelogs/archive/2.0.0/: release.yml  release_summary.yml
changelogs/archive/2.1.0/: release_summary.yml
changelogs/fragments/: 1.0.0.yml  1.1.0.yml  2.1.0.yml
playbooks/: main.yml
roles/certmanage/: README.md
roles/certmanage/defaults/: main.yml
roles/certmanage/handlers/: main.yml
roles/common/: .ansible-lint  README.md
roles/journald/: README.md
roles/logrotate/: README.md
roles/ntp/: .ansible-lint  README.md
roles/proxy/: .ansible-lint  README.md
roles/ssh/: README.md
roles/sudo/: README.md
roles/upgrade/: README.md
roles/webserver/: .ansible-lint  README.md
scripts/: release.sh
(+133 files in other folders)
