[project]
name = "thorian93.main"
version = "1.3.0"
description = "Ansible Collection thorian93 main"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antsibull-changelog==0.35.0",
    "antsibull-docs==2.24.0",
    "ansible-lint==26.1.1",
    "jinja2==3.1.6",
    "molecule==25.12.0",
    "molecule-plugins[podman]==25.8.12",
    "pywinrm==0.5.0",
    "yamllint==1.38.0",
]
